--- a/.gitignore
+++ b/.gitignore
@@ -82,7 +82,7 @@ DocProject/Help/html
 # Publish Web Output
 *.[Pp]ublish.xml
 *.azurePubxml
-# TODO: Comment the next line if you want to checkin your web deploy settings 
+# TODO: Comment the next line if you want to checkin your web deploy settings
 # but database connection strings (with potential passwords) will be unencrypted
 *.pubxml
 *.publishproj
@@ -211,5 +211,14 @@ $RECYCLE.BIN/
 /proj/Win32
 /test/*.dll
 /proj/build
+CMakeFiles
+CMakeCache.txt
+Makefile
+
+libArmyAnt*.so
+libArmyAnt*.dylib
+libArmyAnt*.o
+libArmyAnt*.a
 
 *.xdc
+*.cbp
